
* The derived variable conversions that produce uncertainty and covariance
  variables filled with NaNs from scratch have been removed.

* Fixed several derived variable conversions for covariances.

* Added derived variable conversion from time independent to time dependent
  for instrument_latitude, instrument_longitude, and instrument_altitude.

* Added support for ingestion of ECMF GRIB data.

* Added 'species' ingestion option to the MIPAS L2 ingestion.

* Fixed issue in GEOMS ingestion where long variable names were truncated.

* Introduced convention that dimensionless quantities should have an empty
  'units' attribute string value. Only non-quantities should omit the 'units'
  attribute.

* Introduced a more strict definition of variable names for the HARP data
  format. As part of this the list of supported species and associated naming
  has also been revised.

* Introduced strict separation between dry air and total/wet air. The default
  air density in HARP is now the total/wet air. Anything related to dry air
  should now be annotated as such in the variable name. As a result, 'dry_air'
  is now introduced as a species, and for mixing ratios the '_wet' postfix is
  removed and the '_dry_air' postfix is introduced.

* Covariance variables have been renamed from '*_cov' to '*_covariance'.

* The split of random/systematic for covariances has been removed.
  For ingested products that had such covariances, the random covariances are
  now retrieved as plain covariances and from systematic covariances only the
  trace is retrieved and provided as a systematic uncertainty.

* Added 'geopotential' as a supported quantity with conversions from/to
  'geopotential height'. Added HARP_UNIT_GEOPOTENTIAL.

* Renamed cloud optical thickness to cloud optical depth.

0.2 2016-06-30
~~~~~~~~~~~~~~

* Added Python interface.

* CODA is no longer included as part of HARP, but is treated as a separate
  package, just like HDF4 and HDF5.
