@@ -598,24 +598,6 @@ avk</td>
 <td>&nbsp;</td>
 <td>this is the mass density</td>
 </tr>
-<tr class="row-even"><td>flag_am_pm</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>string variable with either &#8216;am&#8217; or &#8216;pm&#8217;</td>
-</tr>
-<tr class="row-odd"><td>flag_day_twilight_night</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>&nbsp;</td>
-<td>string variable with either &#8216;day&#8217;, &#8216;twilight&#8217;, or &#8216;night&#8217;</td>
-</tr>
 <tr class="row-even"><td>frequency</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
